# tdd-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
inc/: README.md  soundex.hpp  string_util.hpp
notes/: chapter-02.md  chapter-03.md  chapter-04.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-2.md  chapter-3.md
src/: soundex_test.cpp
